src/objects/RevenueShare__c.object
<CustomObject>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>RevenueShares</relationshipLabel>
        <relationshipName>RevenueShares</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProfitCenter__c</fullName>
        <label>ProfitCenter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ASIA</fullName>
                </value>
                <value>
                    <fullName>DACH_CORE</fullName>
                </value>
                <value>
                    <fullName>DACH_EU</fullName>
                </value>
                <value>
                    <fullName>FRANCE</fullName>
                </value>
                <value>
                    <fullName>UNITED_KINGDOM</fullName>
                </value>
                <value>
                    <fullName>UNITED_STATES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SalesManagerId__c</fullName>
        <label>SalesManagerId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SalesManager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RevenueShares</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TotalShareInPercent__c</fullName>
        <label>TotalShareInPercent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalShareValue__c</fullName>
        <label>TotalShareValue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>RevenueShare</label>
    <nameField>
        <label>RevenueShare Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RevenueShares</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>